--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
         "jest": "^24.7.1",
         "multer": "^1.3.0",
         "react": "^16.9.0-alpha.0",
+        "react-beautiful-dnd": "^13.0.0",
         "react-dom": "^16.9.0-alpha.0",
+        "react-drag-drop-container": "^6.1.1",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
