--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-beautiful-dnd": "^13.0.0",
         "react-dom": "^16.9.0-alpha.0",
         "react-drag-drop-container": "^6.1.1",
+        "react-magnific-popup": "^1.0.1",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
