--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,41 @@ secrets.json
 /assets/contact-form
 _notes/
 dwsync.xml
+_SYNCAPP/
+.htaccess
+BingSiteAuth.xml
+cookies.txt
+favicon.ico
+google8bdabfa208454ad6.html
+imprint_de.html
+imprint_en.html
+index_de_o.Goo.html
+index_de_ohneTeam.html
+index.html
+news.html
+robots.txt
+sitemap.xml
+Thumbs.db
+
+assets/_styles/main.css.map
+assets/_styles/responsive.css.map
+assets/_styles/template-picker.css.map
+assets/_styles/vendor/jquery.mb.YTPlayer.min.css_old
+assets/contact-form/contact-form.php
+assets/_styles/main.css
+assets/_styles/responsive.css
+assets/_styles/template-picker.css
+assets/_styles/vendor/bootstrap.css.map
+assets/contact-form/contact-form.php
+blog/blog-post.html
+static/
+
+
+bundle.js
+
+index.html
+
+assets/_styles/vendor/images/raster@2x.png
+assets/_styles/vendor/images/raster_dot@2x.png
+assets/_styles/vendor/images/raster_dot.png
+index.html
