--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "http-proxy-middleware": "^0.19.1",
         "jest": "^24.7.1",
         "multer": "^1.3.0",
+        "node-notifier": "^9.0.0",
         "react": "^16.9.0-alpha.0",
         "react-beautiful-dnd": "^13.0.0",
         "react-dom": "^16.9.0-alpha.0",
