--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "spiced-social-network",
+    "name": "final_project",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -22,6 +22,7 @@
         "axios": "^0.21.1",
         "babel-loader": "^8.0.5",
         "bcryptjs": "^2.4.3",
+        "browserslist": "^4.16.6",
         "compression": "^1.7.0",
         "cookie-session": "^2.0.0-alpha.2",
         "crypto-random-string": "^3.0.1",
@@ -29,8 +30,10 @@
         "eslint": "^4.19.1",
         "eslint-plugin-react": "^7.12.4",
         "express": "^4.14.0",
+        "hosted-git-info": "^2.8.9",
         "http-proxy-middleware": "^0.19.1",
         "jest": "^24.7.1",
+        "lodash": "^4.17.21",
         "multer": "^1.3.0",
         "node-notifier": "^9.0.0",
         "react": "^16.9.0-alpha.0",
@@ -50,7 +53,8 @@
         "spiced-pg": "^1.0.0",
         "uid-safe": "^2.1.4",
         "webpack": "^4.29.6",
-        "webpack-dev-middleware": "^1.8.4"
+        "webpack-dev-middleware": "^1.8.4",
+        "xmlhttprequest-ssl": "^1.6.3"
     },
     "jest": {
         "setupFiles": [
